--- a/add-socks5-support/libp2p/nameresolving/nameresolver.html
+++ b/add-socks5-support/libp2p/nameresolving/nameresolver.html
@@ -218,6 +218,13 @@ window.addEventListener("DOMContentLoaded", main2);
     title="getHostname(ma: MultiAddress): string">getHostname(ma: MultiAddress): string</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">resolveDnsAddr
+      <li><a class="reference" href="#resolveDnsAddr%2CNameResolver%2CMultiAddress%2Cint"
+    title="resolveDnsAddr(self: NameResolver; ma: MultiAddress; depth: int = 0): Future[
+    seq[MultiAddress]]">resolveDnsAddr(self: NameResolver; ma: MultiAddress; depth: int = 0): Future[
+    seq[MultiAddress]]</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">resolveMAddress
       <li><a class="reference" href="#resolveMAddress%2CNameResolver%2CMultiAddress"
     title="resolveMAddress(self: NameResolver; address: MultiAddress): Future[
@@ -296,6 +303,20 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="resolveDnsAddr,NameResolver,MultiAddress,int" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#resolveDnsAddr%2CNameResolver%2CMultiAddress%2Cint"><span class="Identifier">resolveDnsAddr</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="nameresolver.html#NameResolver"><span class="Identifier">NameResolver</span></a><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">;</span> <span class="Identifier">depth</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <span class="Identifier">seq</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/nameresolving/nameresolver.nim#L81"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/nameresolving/nameresolver.nim#L81" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="resolveMAddress,NameResolver,MultiAddress" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#resolveMAddress%2CNameResolver%2CMultiAddress"><span class="Identifier">resolveMAddress</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="nameresolver.html#NameResolver"><span class="Identifier">NameResolver</span></a><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
     <span class="Identifier">seq</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
@@ -304,9 +325,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/nameresolving/nameresolver.nim#L127"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/nameresolving/nameresolver.nim#L118"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/nameresolving/nameresolver.nim#L127" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/nameresolving/nameresolver.nim#L118" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -353,7 +374,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-29 12:05:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-29 18:07:42 UTC</small>
       </div>
     </div>
   </div>
