--- a/discoveryInterfaceV1/libp2p/protocols/rendezvous.html
+++ b/discoveryInterfaceV1/libp2p/protocols/rendezvous.html
@@ -225,7 +225,9 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#RendezVousCodec"
+      <li><a class="reference" href="#MinimumDuration"
+    title="MinimumDuration = (value: 7200000000000)">MinimumDuration</a></li>
+  <li><a class="reference" href="#RendezVousCodec"
     title="RendezVousCodec = &quot;/rendezvous/1.0.0&quot;">RendezVousCodec</a></li>
 
   </ul>
@@ -354,6 +356,18 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
+<div id="MinimumDuration" class="tohide">
+<dt><pre><a href="rendezvous.html#MinimumDuration"><span class="Identifier">MinimumDuration</span></a> <span class="Other">=</span> <span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <span class="DecNumber">7200000000000</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterfaceV1/libp2p/protocols/rendezvous.nim#L35"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="RendezVousCodec" class="tohide">
 <dt><pre><a href="rendezvous.html#RendezVousCodec"><span class="Identifier">RendezVousCodec</span></a> <span class="Other">=</span> <span class="StringLit">&quot;/rendezvous/1.0.0&quot;</span></pre></dt>
 <dd>
@@ -516,7 +530,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-30 10:06:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-10-03 11:56:19 UTC</small>
       </div>
     </div>
   </div>
