update docs for unstable

--- a/unstable/libp2p/multiaddress.html
+++ b/unstable/libp2p/multiaddress.html
@@ -605,6 +605,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="append(m1: var MultiAddress; m2: MultiAddress): MaResult[void]">append(m1: var MultiAddress; m2: MultiAddress): MaResult[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">bytes
+      <li><a class="reference" href="#bytes%2CMultiAddress"
+    title="bytes(value: MultiAddress): seq[byte]">bytes(value: MultiAddress): seq[byte]</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">concat
       <li><a class="reference" href="#concat%2CMultiAddress%2CMultiAddress"
     title="concat(m1, m2: MultiAddress): MaResult[MultiAddress]">concat(m1, m2: MultiAddress): MaResult[MultiAddress]</a></li>
@@ -1709,6 +1714,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="bytes,MultiAddress" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#bytes%2CMultiAddress"><span class="Identifier">bytes</span></a><span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1087"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1087" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="concat,MultiAddress,MultiAddress" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#concat%2CMultiAddress%2CMultiAddress"><span class="Identifier">concat</span></a><span class="Other">(</span><span class="Identifier">m1</span><span class="Other">,</span> <span class="Identifier">m2</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <a href="multiaddress.html#MaResult"><span class="Identifier">MaResult</span></a><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span>
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
@@ -1755,9 +1772,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1090"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1093"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1090" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1093" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -1768,9 +1785,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1105"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1108"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1105" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1108" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -2105,9 +2122,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1087"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/multiaddress.nim#L1090"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1087" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multiaddress.nim#L1090" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -2157,7 +2174,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-10-29 21:50:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-10-30 07:51:23 UTC</small>
       </div>
     </div>
   </div>
